--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -32,13 +32,13 @@ links: footer
 big_footer_signup_form: false
 
 # Configuration for footer heading. (optional)
-heading: Name of agency
+heading: U.S. General Services Administration
 
 # Configuration for agency logo(s) (shown side by side).
 # If the logo is external add external: true
 logos:
-  - src: https://18f.gsa.gov/assets/img/logos/18f-logo.svg
-    alt: 18F
+  - src: assets/img/GSA_Starmark.png
+    alt: GSA
     external: true
 
 # Configuration for footer contact links
